--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <img src="logo.png" alt="logo" id="logo">
+        
+        <input type="search" placeholder = "cerca nel sito" id="cerca" name="cerca">
+        <div class = "naviga">
+                <a href="url_help" > Help</a>
+                <a href="url_share" > Condividi</a>
+                <a href="url_email" > Email to</a>
+        </div>
     </header>
+    <main>
+        <section>
+            <article>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
